Fix Keycloak resources creation issue